# openmind

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  TECHNICAL_SPEC.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml
data/: README.md
data/notes/: holiday-plan.txt  portugal-move.txt  thesis-ideas.md
data/projects/: config.json  fleetpulse.md  job-applications.csv  oauth-debug.js
data/web/: local-memory.html
openmind/api/: __init__.py  app.py  auth.py  cors.py  deps.py  files.py  schemas.py
openmind/api/routes/: __init__.py  actions.py  ignore_rules.py  indexing.py  memory.py  models.py  sources.py  system.py  watching.py
openmind/cli/: main.py
openmind/core/: config.py  engine.py  errors.py  logging.py  models.py
openmind/embeddings/: provider.py
openmind/extractors/: __init__.py  base.py  code.py  docx.py  html.py  image.py  ocr.py  pdf.py  tabular.py  text.py
openmind/ignore/: __init__.py  defaults.py  engine.py  errors.py  models.py
openmind/ingestion/: chunker.py  normalizer.py
openmind/llm/: answer.py  session.py
openmind/providers/lmstudio/: __init__.py  client.py  embeddings.py  errors.py  images.py  llm.py  models.py
openmind/retrieval/: context.py  search.py
openmind/sources/: manager.py  scanner.py
openmind/storage/: lance_store.py  sqlite_store.py
openmind/watcher/: __init__.py  debounce.py  errors.py  events.py  handler.py  service.py  state.py
tests/: test_api.py  test_chunker.py  test_cli_ask.py  test_cli_flush.py  test_cli_help.py  test_cli_logs.py  test_cli_models.py  test_cli_sources.py  test_cli_uninstall.py  test_cli_watch.py  test_config.py  test_extractors.py  test_ignore_rules.py  test_index_controls.py  test_lance_store.py  test_lmstudio_provider.py  test_logging.py  test_scanner.py  test_search_and_ask.py  test_source_filtering.py  test_source_removal.py  test_sqlite_store.py  test_watcher.py
