[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openmind-core"
version = "0.2.0"
description = "Local-first AI memory engine for user-approved folders."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenMind contributors" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "lancedb>=0.13.0",
  "sentence-transformers>=3.0.0",
  "pydantic>=2.7.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.0",
  "beautifulsoup4>=4.12.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
openmind = "openmind.cli.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["openmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
