[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openmind-core"
version = "0.0.4"
description = "Local-first AI memory engine for user-approved folders."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenMind contributors" }]
keywords = ["ai", "cli", "local-first", "memory", "rag", "search", "lancedb", "lm-studio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "questionary>=2.0.1,<3",
  "lancedb>=0.13.0",
  "sentence-transformers>=3.0.0",
  "pydantic>=2.7.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.0",
  "beautifulsoup4>=4.12.0",
  "pandas>=2.2.0",
  "pypdfium2>=5.11.0",
  "pillow>=12.3.0",
  "rapidocr-onnxruntime>=1.4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
openmind = "openmind.cli.main:app"

[project.urls]
Homepage = "https://github.com/codewithbro95/openmind"
Repository = "https://github.com/codewithbro95/openmind"
Issues = "https://github.com/codewithbro95/openmind/issues"
Changelog = "https://github.com/codewithbro95/openmind/blob/main/CHANGELOG.md"

[tool.uv]
package = true

[tool.hatch.build]
exclude = [
  "/.uv-cache",
  "/.venv",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.mypy_cache",
  "/dist",
  "/data/assets/user",
  "*.pyc",
  ".DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["openmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
